// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OrdersNewPageComponent should not render the template when the VM is not provided 1`] = `
<div
  id="root0"
  ng-version="18.2.8"
>
  <!--container-->
</div>
`;

exports[`OrdersNewPageComponent should render the template when the VM is provided 1`] = `
<div
  id="root1"
  ng-version="18.2.8"
>
  <app-page-section>
    <section
      class="mt-72 md:mt-25"
    >
      <!--container-->
    </section>
  </app-page-section>
  <!--container-->
</div>
`;
